--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,8 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --font-satoshi: var(--font-satoshi);
+  --font-karla: var(--font-karla);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
